--- a/spec/fixtures/vcr_cassettes/destroy-group.yml
+++ b/spec/fixtures/vcr_cassettes/destroy-group.yml
@@ -31,14 +31,14 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Date:
-      - Fri, 12 Feb 2016 11:50:37 GMT
+      - Fri, 12 Feb 2016 13:29:03 GMT
       Content-Length:
       - '738'
     body:
       encoding: UTF-8
       string: '{"userName":"<USERNAME>","accountAlias":"ALTD","locationAlias":"VA1","roles":["AccountAdmin","AccountViewer","BillingAdmin","DNSManager","NetworkAdmin","SecurityAdmin","ServerAdmin","ServerOperator","ServerScheduler"],"bearerToken":"<AUTH_TOKEN>"}'
     http_version:
-  recorded_at: Fri, 12 Feb 2016 11:51:16 GMT
+  recorded_at: Fri, 12 Feb 2016 13:29:42 GMT
 - request:
     method: delete
     uri: https://api.ctl.io/v2/groups/ALTD/absent
@@ -68,12 +68,402 @@ http_interactions:
       Expires:
       - '-1'
       Date:
-      - Fri, 12 Feb 2016 11:50:37 GMT
+      - Fri, 12 Feb 2016 13:29:04 GMT
       Content-Length:
       - '81'
     body:
       encoding: UTF-8
-      string: '{"rel":"status","href":"/v2/operations/altd/status/va1-334662","id":"va1-334662"}'
+      string: '{"rel":"status","href":"/v2/operations/altd/status/va1-334736","id":"va1-334736"}'
     http_version:
-  recorded_at: Fri, 12 Feb 2016 11:51:17 GMT
+  recorded_at: Fri, 12 Feb 2016 13:29:43 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:04 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:44 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:07 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:46 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:09 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:48 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:12 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:51 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:15 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:54 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:17 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:56 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:19 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:29:59 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:22 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:30:01 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:24 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"notStarted"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:30:04 GMT
+- request:
+    method: get
+    uri: https://api.ctl.io/v2/operations/ALTD/status/va1-334736
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - <AUTH_TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - no-cache
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Expires:
+      - '-1'
+      Vary:
+      - Accept-Encoding
+      Date:
+      - Fri, 12 Feb 2016 13:29:27 GMT
+      Content-Length:
+      - '141'
+    body:
+      encoding: UTF-8
+      string: '{"status":"succeeded"}'
+    http_version:
+  recorded_at: Fri, 12 Feb 2016 13:30:07 GMT
 recorded_with: VCR 3.0.1
